	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2012.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2013.vcxproj
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2013.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2015.vcxproj
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/SDKMeshFileWriter2015.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/sdkmesh.h
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/sdkmeshfilewriter.cpp
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/sdkmeshfilewriter.h
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/stdafx.cpp
	deleted:    ZGame/3dsMax/FBX/sdkmeshfilewriter/stdafx.h
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2012.vcxproj
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2012.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2013.vcxproj
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2013.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2015.vcxproj
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/XATGFileWriter2015.vcxproj.filters
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/stdafx.cpp
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/stdafx.h
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xatgfilewriter.cpp
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xatgfilewriter.h
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xmlwriter.cpp
	deleted:    ZGame/3dsMax/FBX/xatgfilewriter/xmlwriter.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/11/24.15_16_00.97.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/exportobjects/exportscene.cpp
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/ParseAnimation.cpp
