@@ -105,9 +105,10 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-11-23 13:10:56 L.38 '38944 T728401453 .K ~979 +----+----+----+----+----+
+     Zndex_E : //z 2015-11-24 20:09:43 L.37 '13817 T884673712 .K ~983 +----+----+----+----+----+
      TimeCnt : //z 2015-11-23 13:10:42 L.38 '38958 T728401416 .K ~57  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-11-23 13:10:33 L.38 '38967 T728401384 .K ~38  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-11-24 20:09:36 L.37 '13824 T884673682 .K ~39  +----+----+----+----+----+
+     #39  R+ : //z 2015-11-24 20:09:36 L.37 '13824 T884673682 .K ~39    V+.1020 L+.1070 
      #38  R+ : //z 2015-11-23 13:10:33 L.38 '38967 T728401384 .K ~38    V+.1014 L+.1072 
      #37  R+ : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37    V+.961  L+.1021 
      #36  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36    V+.920  L+.972  
@@ -150,7 +151,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-11-23 13:10:56 L.38 '38944 T728401453 .K ~1017  R+.38   L+.1073 --+----+
+     Version : //z 2015-11-24 20:09:43 L.37 '13817 T884673712 .K ~1022  R+.39   L+.1069 --+----+
+     #53  R+ : //z 2015-11-24 20:09:36 L.37 '13824 T884673682 .K ~1020  R+.39   L+.1071 V+.1020 
      #53  R+ : //z 2015-11-23 13:10:33 L.38 '38967 T728401384 .K ~1014  R+.38   L+.1073 V+.1014 
      #53  V+ : //z 2015-11-19 16:42:32 L.42 '26248 T2775797748.K ~1007  R+.37   L+.1062 
      #52  V+ : //z 2015-10-30 17:54:18 L.62 '21942 T2306606228.K ~988   R+.37   L+.1046 
@@ -241,7 +243,7 @@
      #0   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~3     R+.1    L+.63   V+.3    
      K   Ter : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K  Mers : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     K Kersi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
+     K Kersi : //z 2015-11-24 20:09:38 L.37 '13822 T884673684 .K ~1021  R+.39   L+.1080 
      KVersio : //z 2015-08-13 17:33:16 L.140'23204 T3396706935.K ~599   R+.27   L+.649  
      K Versi : //z 2015-07-01 18:10:59 L.183'20941 T981018774 .K ~457   R+.21   L+.495  
      K  Vers : //z 2015-06-04 16:19:53 L.210'27607 T1565149273.K ~347   R+.17   L+.361  
@@ -1056,7 +1058,16 @@ http://www.zhihu.com/question/27525631
 http://www.scratchapixel.com/
 
 如果不是大牛，知乎上有关图形学的问题基本上看Milo Yip就足够了，水平高，热于且善于分享。我仔细看过的图形学书籍（系统的学习计算机图形学，有哪些不同阶段的书籍的推荐？ - Milo Yip 的回答中列的书或多或少都看过）中，感觉基础阶段最好的是《Fundamentals of Computer Graphics, Third Edition (豆瓣)》，实践的话《Interactive Computer Graphics: A Top-Down Approach with OpenGL》也不错。RTR仔细通读前四章，后面的一边实践一边慢慢读
+#endregion //z 2015-10-19 15:53:24 L.73 '29196 BG57IV3@XCL T153923189 .K.F4146951713-+----+----+
 
+#region 11-23 13:10 R#.38   @cpp11
+//z 2015-11-23 13:10:42 L.38 '38958 T728401416 .K[T57,L1072,R38,V1016]
+01. 使用 cpp 11 改进程序
+http://www.cnblogs.com/qicosmos/category/490693.html
+#endregion //z 2015-11-23 13:10:33 L.38 '38967 BG57IV3@XCL T728401384 .K.F4146951713-+----+----+
+
+#region 11-24 20:09 R#.39   @fbx
+01. 
 //z 2015-11-19 15:54:56 L.42 '29104 T1485587644.K[T55,L1057,R37,V996]
 Building blocks for generative art and computational design projects. Ranging from audio-visual interactive installations to generative design tools. http://www.field.io/process
 https://github.com/field/FieldKit.cpp.git
@@ -1066,10 +1077,5 @@ https://github.com/field/FieldKit.cpp.git
 svn checkout http://dx11-engine.googlecode.com/svn/trunk/ dx11-engine
 一个 fbx viewer
 https://code.google.com/archive/p/fbxviewer/
-#endregion //z 2015-10-19 15:53:24 L.73 '29196 BG57IV3@XCL T153923189 .K.F4146951713-+----+----+
-
-#region 11-23 13:10 R#.38   @cpp11
-//z 2015-11-23 13:10:42 L.38 '38958 T728401416 .K[T57,L1072,R38,V1016]
-01. 使用 cpp 11 改进程序
-http://www.cnblogs.com/qicosmos/category/490693.html
-#endregion //z 2015-11-23 13:10:33 L.38 '38967 BG57IV3@XCL T728401384 .K.F4146951713-+----+----+
+https://github.com/shaderjp
+#endregion //z 2015-11-24 20:09:36 L.37 '13824 BG57IV3@XCL T884673682 .K.F4146951713-+----+----+
