@@ -5690,3 +5690,14 @@ Changes to be committed:
 	modified:   ZGame/3dsMax/FBX/contentexporter/exportobjects/exportscene.cpp
 	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/ParseAnimation.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/11/24.20_09_47.64.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
